--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -939,7 +939,10 @@
                                 <div v-else class="flex flex-col justify-center gap-4">
                                     <div class="flex items-center px-4">
                                         <div class="w-8 flex justify-start">
-                                            <button :disabled="!hasNextManga || selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending') || selectedManga?.status === 'success' || selectedManga?.status === 'ratelimiting' || selectedManga?.status === 'sending'" @click="navigateToNextManga(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                            <button v-if="showNextMangaGroupButton" :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending') || selectedManga?.status === 'success' || selectedManga?.status === 'ratelimiting' || selectedManga?.status === 'sending'" @click="navigateToNextMangaGroup(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next-tb.png" alt="التالي" class="h-8 w-8" />
+                                            </button>
+                                            <button v-if="!showNextMangaGroupButton" :disabled="!hasNextManga || selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending') || selectedManga?.status === 'success' || selectedManga?.status === 'ratelimiting' || selectedManga?.status === 'sending'" @click="navigateToNextManga(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/next.png" alt="التالي" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -947,7 +950,10 @@
                                             <span class="text-lg font-bold">{{ selectedManga.MangaNumber }}</span>
                                         </div>
                                         <div class="w-8 flex justify-end">
-                                            <button :disabled="!hasPreviousManga || selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending') || selectedManga?.status === 'success' || selectedManga?.status === 'ratelimiting' || selectedManga?.status === 'sending'" @click="navigateToPreviousManga(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                            <button v-if="showPreviousMangaGroupButton" :disabled="selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending') || selectedManga?.status === 'success' || selectedManga?.status === 'ratelimiting' || selectedManga?.status === 'sending'" @click="navigateToPreviousMangaGroup(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
+                                                <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous-tb.png" alt="السابق" class="h-8 w-8" />
+                                            </button>
+                                            <button v-if="!showPreviousMangaGroupButton" :disabled="!hasPreviousManga || selectedEpisode?.EpisodeVideosIDs?.some(video => video.status === 'success' || video.status === 'ratelimiting' || video.status === 'sending') || selectedEpisode?.EpisodeMangasIDs?.some(manga => manga.status === 'success' || manga.status === 'ratelimiting' || manga.status === 'sending') || selectedManga?.status === 'success' || selectedManga?.status === 'ratelimiting' || selectedManga?.status === 'sending'" @click="navigateToPreviousManga(); resetStatusForEpisodeManga();" class="transition-opacity disabled:opacity-50 disabled:cursor-not-allowed transition-all duration-100 active:scale-90">
                                                 <img src="https://raw.githubusercontent.com/c7bb/6Y9//main/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/res/previous.png" alt="السابق" class="h-8 w-8" />
                                             </button>
                                         </div>
@@ -6977,6 +6983,46 @@
                     const currentGroup = this.groupedMangas[this.activeTab.mangas].items;
                     const currentIndex = currentGroup.findIndex(manga => manga.MangaNumber === this.selectedManga.MangaNumber);
                     return currentIndex !== -1 && currentIndex > 0;
+                },
+
+                isLastMangaInGroup() {
+                    if (!this.selectedManga || !this.groupedMangas[this.activeTab.mangas]) {
+                        return false;
+                    }
+                    const currentGroup = this.groupedMangas[this.activeTab.mangas].items;
+                    const currentIndex = currentGroup.findIndex(manga => manga.MangaNumber === this.selectedManga.MangaNumber);
+                    return currentIndex !== -1 && currentIndex === currentGroup.length - 1;
+                },
+
+                isFirstMangaInGroup() {
+                    if (!this.selectedManga || !this.groupedMangas[this.activeTab.mangas]) {
+                        return false;
+                    }
+                    const currentGroup = this.groupedMangas[this.activeTab.mangas].items;
+                    const currentIndex = currentGroup.findIndex(manga => manga.MangaNumber === this.selectedManga.MangaNumber);
+                    return currentIndex !== -1 && currentIndex === 0;
+                },
+
+                hasNextMangaGroup() {
+                    if (!this.groupedMangas || this.groupedMangas.length === 0) {
+                        return false;
+                    }
+                    return this.activeTab.mangas < this.groupedMangas.length - 1;
+                },
+
+                hasPreviousMangaGroup() {
+                    if (!this.groupedMangas || this.groupedMangas.length === 0) {
+                        return false;
+                    }
+                    return this.activeTab.mangas > 0;
+                },
+
+                showNextMangaGroupButton() {
+                    return this.isLastMangaInGroup && this.hasNextMangaGroup;
+                },
+
+                showPreviousMangaGroupButton() {
+                    return this.isFirstMangaInGroup && this.hasPreviousMangaGroup;
                 },
 
                 episodeOfWeek() {
@@ -16144,6 +16190,24 @@
                     const currentIndex = currentGroup.findIndex(manga => manga.MangaNumber === this.selectedManga.MangaNumber);
                     if (currentIndex !== -1 && currentIndex > 0) {
                         this.selectedManga = currentGroup[currentIndex - 1];
+                    }
+                },
+
+                navigateToNextMangaGroup() {
+                    if (!this.hasNextMangaGroup) return;
+                    this.activeTab.mangas += 1;
+                    const nextGroup = this.groupedMangas[this.activeTab.mangas];
+                    if (nextGroup && nextGroup.items.length > 0) {
+                        this.selectedManga = nextGroup.items[0];
+                    }
+                },
+
+                navigateToPreviousMangaGroup() {
+                    if (!this.hasPreviousMangaGroup) return;
+                    this.activeTab.mangas -= 1;
+                    const previousGroup = this.groupedMangas[this.activeTab.mangas];
+                    if (previousGroup && previousGroup.items.length > 0) {
+                        this.selectedManga = previousGroup.items[previousGroup.items.length - 1];
                     }
                 },
 
