--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -13414,33 +13414,55 @@
                         if (days > 0) parts.push(`${days}d`);
                         if (hours > 0) parts.push(`${hours}h`);
                         if (minutes > 0) parts.push(`${minutes}min`);
-                        this.countdownEnglish = parts.join(' ');
+                        this.countdownEnglish = parts.join('');
                         
                         // Arabic format
-                        if (days === 0 && hours < 24) {
-                            this.countdownArabic = 'متبقٍّ أقل من يوم';
-                        } else if (days === 1) {
-                            this.countdownArabic = 'متبقٍّ يوم واحد';
-                        } else if (days < 2) {
-                            this.countdownArabic = 'متبقٍّ أقل من يومين';
+                        let label = '';
+                        let unit = '';
+
+                        if (days === 1) {
+                            label = 'يوم واحد';
                         } else if (days === 2) {
-                            this.countdownArabic = 'متبقٍّ يومان';
-                        } else if (days < 3) {
-                            this.countdownArabic = 'متبقٍّ أقل من 3 أيام';
-                        } else if (days === 3) {
-                            this.countdownArabic = 'متبقٍّ 3 أيام';
-                        } else if (days < 4) {
-                            this.countdownArabic = 'متبقٍّ أقل من 4 أيام';
-                        } else if (days === 4) {
-                            this.countdownArabic = 'متبقٍّ 4 أيام';
-                        } else if (days < 5) {
-                            this.countdownArabic = 'متبقٍّ أقل من 5 أيام';
-                        } else if (days === 5) {
-                            this.countdownArabic = 'متبقٍّ 5 أيام';
-                        } else if (days < 10) {
-                            this.countdownArabic = `متبقٍّ ${days} أيام`;
+                            label = 'يومان';
+                        } else if (days >= 3 && days <= 10) {
+                            unit = 'أيام';
+                            label = `${days} ${unit}`;
                         } else {
-                            this.countdownArabic = `متبقٍّ ${days} يومًا`;
+                            unit = 'يومًا';
+                            label = `${days} ${unit}`;
+                        }
+
+                        if (days < 1) {
+                            this.countdownArabic = 'متبقي أقل من يوم';
+                        } else if (days % 1 !== 0) {
+                            const rounded = Math.floor(days);
+                            let nextUnit = '';
+                            if (rounded >= 3 && rounded <= 10) nextUnit = 'أيام';
+                            else nextUnit = 'يومًا';
+                            this.countdownArabic = `متبقي أكثر من ${rounded} ${nextUnit}`;
+                        } else {
+                            let lessUnit = '';
+                            if (days === 1) {
+                                this.countdownArabic = 'متبقي يوم واحد';
+                                return;
+                            } else if (days === 2) {
+                                this.countdownArabic = 'متبقي يومان';
+                                return;
+                            } else if (days >= 3 && days <= 10) lessUnit = 'أيام';
+                            else lessUnit = 'يومًا';
+
+                            const prev = days - 1;
+                            let prevUnit = (prev >= 3 && prev <= 10) ? 'أيام' : 'يومًا';
+
+                            this.countdownArabic = `متبقي أقل من ${days} ${lessUnit}`;
+
+                            if (hours < 1) {
+                                this.countdownArabic = `متبقي أقل من ${days} ${lessUnit}`;
+                            } else if (hours >= 12 && hours < 24) {
+                                this.countdownArabic = `متبقي أكثر من ${prev} ${prevUnit}`;
+                            } else {
+                                this.countdownArabic = `متبقي ${days} ${lessUnit}`;
+                            }
                         }
                         
                         console.log('Countdown updated:', this.countdownArabic, this.countdownEnglish);
