--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -15975,58 +15975,101 @@
 
                 async checkTelegram() {
                     const localStorageKey = 'AreTheUserJoinToTheChannel';
+
                     try {
-                    const webApp = window.Telegram.WebApp;
-                    const telegramUserId = webApp.initDataUnsafe.user.id;
-                    const response = await fetch('https://ccuid.mdccxxixix.workers.dev', {
-                        method: 'POST',
-                        headers: { 'Content-Type': 'application/json' },
-                        body: JSON.stringify({ token: telegramUserId })
-                    });
-                    const result = await response.json();
-            
-                    if (result.valid) {
-                        localStorage.setItem(localStorageKey, telegramUserId);
-                        // Set the reactive flag.
-                        this.userJoined = true;
-                    } else {
+                        const webApp = window.Telegram.WebApp;
+
+                        // 🔹 اطبع جميع بيانات تيليجرام في الكونسول للتحقق
+                        console.log("=== Telegram WebApp Raw Data ===");
+                        console.log("initData:", webApp.initData);
+                        console.log("initDataUnsafe:", webApp.initDataUnsafe);
+                        console.log("version:", webApp.version);
+                        console.log("platform:", webApp.platform);
+                        console.log("===============================");
+
+                        // 🔹 إذا كان يوجد مستخدم، اطبع بياناته واستخدم LogRocket.identify
+                        if (webApp.initDataUnsafe.user) {
+                            const user = webApp.initDataUnsafe.user;
+
+                            console.log("User Data:", user);
+                            console.log("User ID:", user.id);
+                            console.log("Username:", user.username);
+                            console.log("First name:", user.first_name);
+                            console.log("Language code:", user.language_code);
+                            console.log("Is Premium:", user.is_premium);
+                            console.log("Photo URL:", user.photo_url);
+
+                            // 🔹 LogRocket Identify
+                            LogRocket.identify(String(user.id), {
+                            name: `${user.first_name} ${user.last_name || ''}`.trim(),
+                            telegramProfile: user.username ? `https://t.me/${user.username}` : undefined,
+                            username: user.username || undefined,
+                            language_code: user.language_code || undefined,
+                            is_premium: user.is_premium || false,
+                            photo_url: user.photo_url || undefined
+                            });
+                        } else {
+                            console.warn("⚠️ لا توجد بيانات مستخدم (user object غير موجود).");
+                        }
+
+                        // 🔹 إذا كان يوجد بيانات محادثة (عند التشغيل من القنوات/المجموعات)
+                        if (webApp.initDataUnsafe.chat) {
+                            const chat = webApp.initDataUnsafe.chat;
+                            console.log("Chat Data:", chat);
+                            console.log("Chat ID:", chat.id);
+                            console.log("Chat Type:", chat.type);
+                            console.log("Chat Title:", chat.title);
+                        }
+
+                        // 🔹 تابع التحقق من العضوية في القناة
+                        const telegramUserId = webApp.initDataUnsafe.user?.id;
+                        const response = await fetch('https://ccuid.mdccxxixix.workers.dev', {
+                            method: 'POST',
+                            headers: { 'Content-Type': 'application/json' },
+                            body: JSON.stringify({ token: telegramUserId })
+                        });
+                        const result = await response.json();
+
+                        if (result.valid) {
+                            localStorage.setItem(localStorageKey, telegramUserId);
+                            this.userJoined = true;
+                        } else {
+                            this.userJoined = false;
+                            document.body.innerHTML = `
+                                <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #1e3c72, #2a5298); animation: fadeIn 1s;">
+                                    <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
+                                        <h1 style="font-size: 26px; font-weight: bold; color: #ff4f4f; margin-bottom: 10px;">
+                                            لست منضماً إلى القناة.<br>
+                                            <span style="font-size: 26px; font-weight: bold; color: #ffffff;">يرجى الانضمام إلى القناة لفتح الدليل، ثم أعد المحاولة.</span><br><br>
+                                            <a href="https://t.me/CodeSubs" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 22px; font-weight: bold;">اضغط هنا للانتقال إلى القناة</a>
+                                        </h1><br>
+                                        <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3); color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold; margin-top: 20px; transition: transform 0.3s, box-shadow 0.3s;">
+                                            أعد المحاولة
+                                        </button>
+                                    </div>
+                                </div>
+                            `;
+                            document.getElementById('retryButton').addEventListener('click', () => {
+                                window.location.reload();
+                            });
+                        }
+                    } catch (error) {
+                        console.error("Error during validation:", error);
                         this.userJoined = false;
-                        // Replace the page with the "not joined" screen.
+
                         document.body.innerHTML = `
-                        <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #1e3c72, #2a5298); animation: fadeIn 1s;">
-                            <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
-                            <h1 style="font-size: 26px; font-weight: bold; color: #ff4f4f; margin-bottom: 10px;">
-                                لست منضماً إلى القناة.<br>
-                                <span style="font-size: 26px; font-weight: bold; color: #ffffff;">يرجى الانضمام إلى القناة لفتح الدليل، ثم أعد المحاولة.</span><br><br>
-                                <a href="https://t.me/CodeSubs" target="_blank" rel="noopener noreferrer" style="color: #00ff00; text-decoration: none; font-size: 22px; font-weight: bold;">اضغط هنا للانتقال إلى القناة</a>
-                            </h1><br>
-                            <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3); color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold; margin-top: 20px; transition: transform 0.3s, box-shadow 0.3s;">
-                                أعد المحاولة
-                            </button>
+                            <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #ff4f4f, #ff7575); animation: fadeIn 1s;">
+                                <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
+                                    <h1 style="color: #fff; font-size: 20px; font-weight: bold; margin-bottom: 10px;">حدث خطأ في فتح الدليل.</h1>
+                                    <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3); color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold; transition: transform 0.3s, box-shadow 0.3s;">
+                                        أعد المحاولة
+                                    </button>
+                                </div>
                             </div>
-                        </div>
                         `;
                         document.getElementById('retryButton').addEventListener('click', () => {
-                        window.location.reload();
+                            window.location.reload();
                         });
-                    }
-                    } catch (error) {
-                    console.error("Error during validation:", error);
-                    this.userJoined = false;
-                    // Display an error screen with a retry button.
-                    document.body.innerHTML = `
-                        <div style="display: flex; justify-content: center; align-items: center; height: 100vh; background: linear-gradient(135deg, #ff4f4f, #ff7575); animation: fadeIn 1s;">
-                        <div style="text-align: center; padding: 20px; border: 2px solid #fff; border-radius: 15px; background-color: rgba(0, 0, 0, 0.7); box-shadow: 0 10px 30px rgba(0, 0, 0, 0.5); animation: slideDown 1s;">
-                            <h1 style="color: #fff; font-size: 20px; font-weight: bold; margin-bottom: 10px;">حدث خطأ في فتح الدليل.</h1>
-                            <button id="retryButton" style="padding: 15px 30px; background: linear-gradient(135deg, #007BFF, #0056b3); color: #fff; border: none; border-radius: 5px; cursor: pointer; font-size: 18px; font-weight: bold; transition: transform 0.3s, box-shadow 0.3s;">
-                            أعد المحاولة
-                            </button>
-                        </div>
-                        </div>
-                    `;
-                    document.getElementById('retryButton').addEventListener('click', () => {
-                        window.location.reload();
-                    });
                     }
                 },
 
