--- a/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
+++ b/c28sdcm1jv977n4u63yccbty376l23p0xc38n0b2l4qgrje4d2xwjou9g76xdglsprhbpo1f5dhil392v5xeileb94p8g3le9f/index.html
@@ -5629,11 +5629,11 @@
                 <div id="app" class="container mx-auto p-4 shadow-lg rounded"> <!-- removing bg-slate-700 -->
                     <tbody>
                         <tr v-for="episode in paginatedEpisodes" :key="episode.EpisodeNumber" class="hover:bg-blue-100">
-                            <td :class="[getBackgroundColor(episode), 'border', 'border-gray-300', 'px-2', 'text-lg', 'font-bold', 'py-2', 'text-center']">
+                            <td :class="[getBackgroundColor(episode), 'border', 'border-gray-300', 'px-2', 'text-lg', 'font-bold', 'py-2', 'text-center']" v-tippy="getEpisodeTypeTooltip(episode)">
                                 {{ episode.EpisodeNumber }}
                             </td>
                             <!-- <td class="border border-gray-300 px-4 text-lg font-bold py-2 text-center cursor-pointer">{{ episode.EpisodeTitle }}</td> -->
-                            <td class="border border-gray-300 px-4 text-lg font-bold py-2 text-center cursor-pointer transition-all duration-100 active:scale-90" @click="openModal(episode)">{{ episode.EpisodeTitle }}</td>
+                            <td class="border border-gray-300 px-4 text-lg font-bold py-2 text-center cursor-pointer transition-all duration-100 hover:bg-yellow-900 active:scale-90" @click="openModal(episode)">{{ episode.EpisodeTitle }}</td>
                         </tr>
                     </tbody>
             
@@ -13353,6 +13353,35 @@
                 },
             },
             methods: {
+                // Get episode type tooltip based on episode properties
+                getEpisodeTypeTooltip(episode) {
+                    if (episode.EpisodeNumber.includes("خاصة بالفيلم")) {
+                        return "خاصة بالفيلم";
+                    } else if (episode.EpisodeNumber.includes("الفيلم")) {
+                        return "فيلم";
+                    } else if (episode.EpisodeSpecial === '1') {
+                        return "خاصة (ساعة)";
+                    } else if (episode.EpisodeSpecial === '2') {
+                        return "خاصة (ساعتين)";
+                    } else if (episode.EpisodeNumber.includes("قصة قصيرة")) {
+                        return "قصة قصيرة";
+                    } else if (episode.EpisodeNumber.includes("أوفا")) {
+                        return "أوفا";
+                    } else if (episode.EpisodeNumber.includes("إصدار خاص")) {
+                        return "إصدار خاص";
+                    } else if (episode.EpisodeNumber.includes("ماجيك كايتو")) {
+                        return "ماجيك كايتو";
+                    } else if (episode.EpisodeNumber.includes("يوميات زيرو")) {
+                        return "يوميات زيرو";
+                    } else if (episode.EpisodeNumber.includes("المجرم هانزاوا")) {
+                        return "المجرم هانزاوا";
+                    } else if (episode.EpisodeType === 'م') {
+                        return "مانغا";
+                    } else if (episode.EpisodeType === 'ف') {
+                        return "فِلر";
+                    }
+                },
+                
                 // Countdown methods
                 calculateCountdown() {
                     const enableCountdownDebug = false; // Set to true to enable debug logging
